MDEV-12462 SPATIAL index fails to work with CONTAINS.

Flags are wrongly set for MBR_CONTAINS/MBR_WITHIN functions.